Add 'translate_recent_target' to chrome://translate-internals

This should make it easier to debug Translate internals.

UI changes:

1. Add 'translate_recent_target' to the Preferences dump in the
   translate-internals page.

2. Add a box for the user to enter a new value for 'translate_recent_target',
   and an 'update' button. When the user clicks the button, the preference is
   updated.

Bug: 855176
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: I97437c792c8b6efb73bdb6d1c21f05c5ffff7d8a
Reviewed-on: https://chromium-review.googlesource.com/1110739
Reviewed-by: anthonyvd <anthonyvd@chromium.org>
Reviewed-by: Hajime Hoshi <hajimehoshi@chromium.org>
Commit-Queue: Nicolas Ouellet-Payeur <nicolaso@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570747}
Former-commit-id: 606ee9b344db1e9dc9f5e374ffa90bfa932dde4a