chrome/browser/ui/webui/translate_internals/translate_internals_handler.h
@@ -59,6 +59,11 @@ class TranslateInternalsHandler : public content::WebUIMessageHandler,
   // when UI requests to remove an item in the preference.
   void OnRemovePrefItem(const base::ListValue* args);
 
+  // Handles the JavaScript message 'setRecentTargetLanguage'. This message is
+  // sent when the UI requests to change the 'translate_recent_target'
+  // preference.
+  void OnSetRecentTargetLanguage(const base::ListValue* args);
+
   // Handles the Javascript message 'overrideCountry'. This message is sent
   // when UI requests to override the stored country.
   void OnOverrideCountry(const base::ListValue* country);
